# server_provision_form

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  sample.rest
.claude/: settings.local.json
agent/: .env.example  Dockerfile  README.md  __init__.py  agent.py  cli.py  config.py  langgraph.json  main.py  proposals.py  pyproject.toml  run.py  tools.py  workflows.py
agent/app/: server.py
agent/app/graph/: a2ui_builder.py  builder.py  state.py
agent/app/graph/nodes/: extractor.py  field_helper.py  field_inferrer.py  intake.py  question_planner.py  recommender.py  reviewer.py  submitter.py  ui_updater.py  validator.py
agent/app/llm/: factory.py
agent/app/persistence/: checkpointer.py
agent/app/tools/: form_api.py
agent/src/server_agent/: agent.py
backend/: Dockerfile  pyproject.toml  run.py
backend/app/: __init__.py  config.py  db.py
backend/app/api/: catalog.py  records.py  summary.py
backend/app/data/: catalog.json  compatibility.json  pricing_rules.json
backend/app/models/: __init__.py  catalog.py  enums.py  record.py
backend/app/services/: catalog_loader.py  pricing.py  promotion.py  records_repo.py  stage_fields.py  validator.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  runtime.mjs  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: agent.ts  client.ts
frontend/src/components/: RecordEditor.tsx  RecordList.tsx  StageBadge.tsx
frontend/src/components/agent/: A2UICatalog.tsx  A2UISurface.tsx  BatchedQuestionForm.tsx  ChatPage.tsx  ChatPanel.tsx
frontend/src/components/fields/: Field.tsx
frontend/src/components/form/: ApplicationsTab.tsx  HardwareTab.tsx  ReviewTab.tsx  SoftwareOSTab.tsx
frontend/src/components/summary/: SummaryView.tsx
frontend/src/hooks/: useCatalog.ts  useLinkedDefaults.ts
frontend/src/schema/: record.ts
frontend/src/state/: recordStore.ts
frontend/src/types/: agent.ts
infra-chat/scripts/: run-agent.bat
infra-chat/src/components/example-layout/: index.tsx
infra-chat/src/hooks/: use-example-suggestions.tsx
