[project]
name = "server-agent"
version = "0.1.0"
description = "Simple LangGraph agent for server provisioning estimation"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "langgraph>=1.1.9",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.1.0",
]

[project.scripts]
server-agent = "server_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server_agent"]
