[project]
name = "server-agent"
version = "0.1.0"
description = "Simple LangGraph agent for server provisioning estimation"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "langgraph>=1.1.9",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.1.0",
    "copilotkit==0.1.87"
]

[project.scripts]
server-agent = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agent.py", "cli.py", "config.py", "tools.py", "workflows.py", "proposals.py"]
